# openfort

./: index.html  package-lock.json  package.json  settings.html
src/: base.css  index.css  main.ts  settings.css  settings.ts  styles.css  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  data.rs  main.rs  utils.rs
