[package]
name = "OpenFort"
version = "0.1.0"
description = "Fortnite 27.11 Launcher"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows = {version = "0.62.2", features = [
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
